--- a/cube-solver.cabal
+++ b/cube-solver.cabal
@@ -36,7 +36,7 @@ library
                       Triggers,
                       AlgExpr
 
-    build-depends:    base ^>=4.17.2.1,
+    build-depends:    base >=4.17.2.1,
                       mtl,
                       text,
                       megaparsec,
@@ -57,9 +57,8 @@ library
 executable cube-solver
     main-is:          Main.hs
 
-    build-depends:    base ^>=4.17.2.1,
-                      cube-solver,
-                      options
+    build-depends:    base >=4.17.2.1,
+                      cube-solver
 
     hs-source-dirs:   app
 
@@ -70,7 +69,7 @@ test-suite cube-solver-tests
     
     main-is:          CubeSolverTest.hs
     
-    build-depends:    base ^>=4.17.2.1, 
+    build-depends:    base >=4.17.2.1, 
                       Cabal >= 3.0,
                       cube-solver,
                       QuickCheck,
